# skill-switch-man

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: add_store.rs  app.rs  config.rs  main.rs  skills.rs  tui.rs  ui.rs  view_html.rs
